--- a/www/docencia.css
+++ b/www/docencia.css
@@ -1,21 +1,25 @@
- :root{
+:root{
     --accent: #0f4d92;
   }
   body {
     font-family: Arial, sans-serif;
-    padding: 1.5rem;
+    margin: 0;
+    padding: 0;
     background: #f7f7fb;
     color: #333;
   }
   h2 { color: var(--accent); margin-top:0; }
   p { line-height:1.6; }
 
-  /* Layout general */
+  /* disposición general */
   .wrapper {
     display: grid;
     grid-template-columns: 260px 1fr;
-    gap: 1.5rem;
-    align-items: stretch; /* <-- hace que ambas columnas se alineen en altura */
+    gap: 0.5rem; /*acá alineo un poco la columna de contenido*/
+    align-items: stretch; /* <--ambas columnas se alineen en altura */
+    padding: 0.1rem; /*espacio interno */
+    box-sizing: border-box;
+    width: 100%;
   }
 
   /* Ocultamos inputs */
@@ -24,9 +28,9 @@
   /* Columna izquierda (pestañas) */
   .sidebar {
     background: #fff;
-    border-radius: 12px;
+    border-radius: 8px;
     box-shadow: 0 6px 18px rgba(0,0,0,0.04);
-    padding: 1rem;
+    padding: 0.5rem;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -36,7 +40,7 @@
   /* Estilo de las pestañas */
   .sidebar label {
     display: block;
-    padding: 0.75rem 1rem;
+    padding: 0.2rem 0.2rem;
     margin-bottom: 0.5rem;
     cursor: pointer;
     border-radius: 8px;
@@ -65,7 +69,7 @@
   .content {
     background: #fff;
     padding: 1.25rem;
-    border-radius: 12px;
+    border-radius: 8px;
     box-shadow: 0 6px 18px rgba(0,0,0,0.04);
     height: 100%;
   }
