--- a/www/docencia.css
+++ b/www/docencia.css
@@ -1,9 +1,9 @@
-:root{
+ :root{
     --accent: #0f4d92;
   }
   body {
     font-family: Arial, sans-serif;
-    margin: 0;
+    margin: 0.2rem;
     padding: 0;
     background: #f7f7fb;
     color: #333;
@@ -15,11 +15,11 @@
   .wrapper {
     display: grid;
     grid-template-columns: 260px 1fr;
-    gap: 0.5rem; /*acá alineo un poco la columna de contenido*/
+    gap: 0.2rem; /*acá alineo un poco la columna de contenido*/
     align-items: stretch; /* <--ambas columnas se alineen en altura */
     padding: 0.1rem; /*espacio interno */
     box-sizing: border-box;
-    width: 100%;
+    width: 99.5%;
   }
 
   /* Ocultamos inputs */
@@ -30,7 +30,7 @@
     background: #fff;
     border-radius: 8px;
     box-shadow: 0 6px 18px rgba(0,0,0,0.04);
-    padding: 0.5rem;
+    padding: 0.2rem;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -99,11 +99,11 @@
     .sidebar {
       flex-direction: column;
       /*gap: .5rem;*/
-      width: 100%;
+      width: 99.5%;
     }
     .sidebar label {
       /*flex: 1;*/
-      width: 100%;
+      width: 99.5%;
       margin-bottom: 0.5rem;
     }
   }
